@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.radbox"
        name="Radbox"
-       version="1.0.0"
+       version="1.0.1"
        provider-name="Radbox Inc.">
   <requires>
     <import addon="xbmc.python" version="2.0"/>
-    <import addon="plugin.video.youtube" version="2.1.3"/>
-    <import addon="plugin.video.vimeo" version="1.1.0" />
-    <import addon="plugin.video.collegehumor" version="0.0.2" />
+    <import addon="plugin.video.youtube" version="2.1.3" optional="true"/>
+    <import addon="plugin.video.vimeo" version="1.1.0" optional="true"/>
+    <import addon="plugin.video.collegehumor" version="0.0.2" optional="true"/>
     <import addon="script.module.beautifulsoup" version="3.0.8"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
